レスポンスのスキーマが直書きされていたのを修正
